--- a/src/app/users/groups/add-group-modal.html
+++ b/src/app/users/groups/add-group-modal.html
@@ -25,7 +25,7 @@
 				<div class="checkbox">
 					<label>
 						<input type="checkbox" id="checkbox">
-						允许此群组所有用户查看所有群组&nbsp;</label><span title="如果选中，则该用户在邀请协作人时可以在自己的联系人列表中访问到其他的内部用户；而除非是自己邀请过的协作人，否则外部用户不会出现在该用户的联系人列表中。" class="glyphicon glyphicon-info-sign"></span>
+						允许此群组所有用户查看所有群组&nbsp;</label><span tooltip="如果选中，则该用户在邀请协作人时可以在自己的联系人列表中访问到其他的内部用户；而除非是自己邀请过的协作人，否则外部用户不会出现在该用户的联系人列表中。" class="glyphicon glyphicon-info-sign"></span>
 				</div>
 			</div>
 		</div>
@@ -35,7 +35,7 @@
 				<div class="checkbox">
 					<label>
 						<input type="checkbox" id="checkbox">
-						允许此群组所有用户同步到全协同&nbsp;</label><span title="如果选中，则该用户在邀请协作人时可以在自己的联系人列表中访问到其他的内部用户；而除非是自己邀请过的协作人，否则外部用户不会出现在该用户的联系人列表中。" class="glyphicon glyphicon-info-sign"></span>
+						允许此群组所有用户同步到全协同&nbsp;</label><span tooltip="如果选中，则该用户在邀请协作人时可以在自己的联系人列表中访问到其他的内部用户；而除非是自己邀请过的协作人，否则外部用户不会出现在该用户的联系人列表中。" class="glyphicon glyphicon-info-sign"></span>
 				</div>
 			</div>
 		</div>
