--- a/src/app/users/managedUsers/row-user-activety.html
+++ b/src/app/users/managedUsers/row-user-activety.html
@@ -1,3 +1,4 @@
-<div class="group-role ngCellText col3 colt3">
-	{{row.entity.user_name}}
+<div class="activety ngCellText col3 colt3">
+	<div>{{row.entity.action_date}}</div>
+	<div>{{row.entity.action}}</div>
 </div>
