--- a/src/app/users/externalUsers/style.less
+++ b/src/app/users/externalUsers/style.less
@@ -1,3 +1,48 @@
 .externalUsers-view {
-  color: red;
+  height: 100%;
+  .buttonGroup{
+      padding-left: 57px;
+      padding-top: 9px;
+      padding-bottom: 9px;
+      border-bottom: 1px solid #afafaf;
+  }
+  .groupGridStyle {
+    bottom: 40px;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 53px;
+    width: 100%;
+    padding-left: 57px;
+    .ngVerticalBarVisible{
+        width: 0;
+    }
+    .ngCellText{
+        border-bottom: 1px solid #cfcfcf;
+        padding-top: 20px;
+     }
+     .ngHeaderCell{
+         border-bottom: 1px solid #afafaf;
+     }
+     .user-name{
+         padding-top: 10px;
+     }
+     .action img{
+         cursor: pointer;
+         padding-left: 20px;
+     }
+     .action img:first-child{
+         padding-left: 0px;
+     }
+//   .grid-align {
+//       text-align: center;
+//   }
+  }
+  
+   button {
+       margin-left: 12px;
+   }
+   .btn.btn-default:first-child{
+       margin-left: 0px;
+   }
 }
