--- a/src/app/users/groups/group-table-action-cell.html
+++ b/src/app/users/groups/group-table-action-cell.html
@@ -1,2 +1,4 @@
-<button id="editBtn" type="button" class="btn btn-primary" ng-click="edit(row)" >Edit</button>
-<button id="deleteBtn" type="button" class="btn btn-primary" ng-click="delete(row)" >Delete</button>
+<div class="action ngCellText col3 colt3">
+	<img src="./src/images/edit.png" ng-click="edit(row)"/>
+	<img src="./src/images/delete.png" ng-click="delete(row)"/>
+</div>
