--- a/src/app/users/managedUsers/template.html
+++ b/src/app/users/managedUsers/template.html
@@ -5,5 +5,5 @@
 		<button ng-click='bulkadd()' class="btn btn-default">批量编辑</button>
 		<button ng-click='exportUser()' class="btn btn-default">导出</button>
 	</div>
-  	<div class="gridStyle" ng-grid="gridOptions" mb-scrollbar></div>
+  <div class="gridStyle" ng-grid="gridOptions"></div>
 </div>
