--- a/src/app/users/groups/style.less
+++ b/src/app/users/groups/style.less
@@ -1,10 +1,12 @@
 .group-view {
   height: 100%;
   .buttonGroup{
+      border-bottom: 1px solid #afafaf;
+      margin-left: 40px;
+      padding-bottom: 9px;
       padding-left: 57px;
       padding-top: 9px;
-      padding-bottom: 9px;
-      border-bottom: 1px solid #afafaf;
+      width: 90%;
   }
   .groupGridStyle {
     bottom: 40px;
@@ -12,8 +14,8 @@
     position: absolute;
     right: 0;
     top: 53px;
-    width: 100%;
-    padding-left: 57px;
+    width: 90%;
+    padding-left: 97px;
     .ngVerticalBarVisible{
         width: 0;
     }
