--- a/src/app/users/managedUsers/add-user-modal.html
+++ b/src/app/users/managedUsers/add-user-modal.html
@@ -5,30 +5,30 @@
 	<h3 class="modal-title">添加内部人员</h3>
 </div>
 <div class="modal-body">
-	<form id="" role="form" class="form-horizontal userDetail">
+	<form role="form" class="form-horizontal userDetail"  name="myForm" ng-submit="ok(user)">
 		<h4>新用户账户信息</h4>
 		<div class="form-group">
-			<label class="col-sm-2 control-label" for="username" >用户名</label>
+			<label class="col-sm-2 control-label" for="username">姓名</label>
 			<div class="col-sm-8">
-				<input type="name" placeholder="请填写用户的真实姓名以便管理" ng-claas="{empty : true}" class="form-control" ng-model="user.user_name">
+				<input type="name" name="username" placeholder="请填写用户的真实姓名以便管理" ng-class="{ empty: userEmpty }" class="form-control" ng-model="user.real_name" required>
 			</div>
 		</div>
 		<div class="form-group">
 			<label class="col-sm-2 control-label">邮箱</label>
 			<div class="col-sm-8">
-				<input type="email" placeholder="此邮箱将作为登录名使用，请准确填写" class="form-control" ng-model="user.email">
+				<input type="email" placeholder="此邮箱将作为登录名使用，请准确填写" class="form-control" ng-model="user.email" required>
 			</div>
 		</div>
 		<div class="form-group">
 			<label class="col-sm-2 control-label">容量</label>
 			<div class="col-sm-2">
-				<input type="" placeholder="" class="form-control" value="5" ng-model="user.user_space">
+				<input type="text"  class="form-control" ng-disabled="user.space_unlimited" ng-model="user.total_space"/>
 			</div>
 			<label class="unit col-sm-1">GB</label>
 			<div class="col-sm-3">
 				<div class="checkbox">
 					<label>
-						<input type="checkbox" id="checkbox">
+						<input type="checkbox" ng-model="user.space_unlimited">
 						无限制</label>
 				</div>
 			</div>
@@ -39,8 +39,8 @@
 			<div class="col-sm-8">
 				<div class="checkbox">
 					<label>
-						<input type="checkbox" id="checkbox">
-						允许该用户查看所有的内部用户&nbsp;</label><span tooltip="如果选中，则该用户在邀请协作人时可以在自己的联系人列表中访问到其他的内部用户；而除非是自己邀请过的协作人，否则外部用户不会出现在该用户的联系人列表中。" class="glyphicon glyphicon-info-sign"></span>
+						<input type="checkbox" ng-model="user.config.show_member">
+						允许该用户查看所有的内部用户</label><span tooltip="如果选中，则该用户在邀请协作人时可以在自己的联系人列表中访问到其他的内部用户；而除非是自己邀请过的协作人，否则外部用户不会出现在该用户的联系人列表中。" class="glyphicon glyphicon-info-sign"></span>
 				</div>
 			</div>
 		</div>
@@ -48,8 +48,8 @@
 			<div class="col-sm-8">
 				<div class="checkbox">
 					<label>
-						<input type="checkbox" id="checkbox">
-						允许该用户在全携通与桌面端间同步文件&nbsp;</label><span tooltip="如果选中，则允许该用户在全携通网页端与桌面客户端之间双向同步文件。" class="glyphicon glyphicon-info-sign"></span>
+						<input type="checkbox" ng-model="user.config.allow_sync">
+						允许该用户在全携通与桌面端间同步文件</label><span tooltip="如果选中，则允许该用户在全携通网页端与桌面客户端之间双向同步文件。" class="glyphicon glyphicon-info-sign"></span>
 				</div>
 			</div>
 		</div>
@@ -57,8 +57,8 @@
 			<div class="col-sm-8">
 				<div class="checkbox">
 					<label>
-						<input type="checkbox" id="checkbox">
-						限定该用户在自己的文件夹中只能邀请内部用&nbsp;</label><span tooltip="如果选中，则禁止该用户在自己的文件夹中邀请外部用户进行协作。" class="glyphicon glyphicon-info-sign"></span>
+						<input type="checkbox" id="checkbox" ng-model="user.config.inner_share">
+						限定该用户在自己的文件夹中只能邀请内部用</label><span  tooltip-placement="bottom" tooltip="如果选中，则禁止该用户在自己的文件夹中邀请外部用户进行协作。" class="glyphicon glyphicon-info-sign"></span>
 				</div>
 			</div>
 		</div>
@@ -112,11 +112,10 @@
 
 		<div class="modal-footer">
 			<button class="btn btn-primary" type="submit" >
-				OK
+				保存
 			</button>
-			<button class="btn btn-warning" ng-click="cancel()">
-				Cancel
-			</button>
+			<input type="button" class="btn" ng-click="cancel()" value="取消">
+			</input>
 		</div>
 	</form>
 
