--- a/src/app/users/managedUsers/delete-user-modal.html
+++ b/src/app/users/managedUsers/delete-user-modal.html
@@ -2,9 +2,9 @@
 	<h3 class="modal-title">DeleteUser</h3>
 </div>
 <div class="modal-body">
-	Are you sure delete this user?
+	你是否确定删除此用户?
 </div>
 <div class="modal-footer">
-	<button class="btn btn-primary" ng-click="ok()">OK</button>
-	<button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+	<button class="btn btn-primary" ng-click="确定()">OK</button>
+	<button class="btn btn-warning" ng-click="取消()">Cancel</button>
 </div>
