--- a/src/app/users/managedUsers/template.html
+++ b/src/app/users/managedUsers/template.html
@@ -1,9 +1,9 @@
-<div class="managedUsers-view" ng-controller="App.Users.ManagedUsers.Controller">
+<div class="managedUsers-view" ng-controller="App.Users.ManagedUsers.Controller" ng-claas="{empty : true}">
 	<div class="buttonGroup">
 		<button ng-click='addUser()' class="btn btn-default">添加用户</button>
 		<button ng-click='bulkEdit()' class="btn btn-default">批量添加</button>
 		<button ng-click='bulkadd()' class="btn btn-default">批量编辑</button>
 		<button ng-click='exportUser()' class="btn btn-default">导出</button>
 	</div>
-  <div class="gridStyle" ng-grid="gridOptions"></div>
+  <div class="gridStyle" ng-grid="gridOptions" ></div>
 </div>
