--- a/src/app/header/style.less
+++ b/src/app/header/style.less
@@ -40,7 +40,7 @@
             top: 8px;
             width: 450px;
             .search-text{
-                background: url("../../src/images/search_icon.png") no-repeat scroll 10px 10px rgba(0, 0, 0, 0);
+                background: url("../../src/images/search_icon.png") no-repeat scroll 10px 10px white;
                 float: left;
                 width: 270px;
                 padding-left: 35px;
