--- a/src/app/users/managedUsers/row-group-role.html
+++ b/src/app/users/managedUsers/row-group-role.html
@@ -1,8 +1,8 @@
 <div class="user-activety ngCellText col3 colt3" ng-show = "row.entity.showRoleMenu">
 	<div class="roll" style="display: block;">
-		<select id="roll" ng-model="row.entity.groupRole" class="">
-			<option value="1">群组成员</option>
-			<option value="2">群组管理员</option>
+		<select ng-model="row.entity.role_id" class="">
+			<option value="0">群组成员</option>
+			<option value="1">群组管理员</option>
 		</select>
 	</div>
 </div>
