--- a/src/app/users/managedUsers/row-user-activety.html
+++ b/src/app/users/managedUsers/row-user-activety.html
@@ -1,4 +1,4 @@
 <div class="activety ngCellText col3 colt3">
 	<div>{{row.entity.action_date}}</div>
-	<div>{{row.entity.action}}</div>
+	<span>{{row.entity.action}}</span>
 </div>
