--- a/src/app/users/managedUsers/style.less
+++ b/src/app/users/managedUsers/style.less
@@ -82,18 +82,18 @@
       border: 1px solid red;
   }
   
-  .tooltip-inner{            
-      background-color: #1f69ba;
-   }
-
-  .tooltip.in {
-      filter: alpha(opacity=100);
-      opacity: 1;
-   }
-   
-  .tooltip-arrow{
-      background-color: #1f69ba;
-   }
+//.tooltip-inner{            
+//    background-color: #1f69ba;
+// }
+//
+//.tooltip.in {
+//    filter: alpha(opacity=100);
+//    opacity: 1;
+// }
+// 
+//.tooltip-arrow{
+//    background-color: #1f69ba;
+// }
   
   
   .tdroll{
@@ -116,5 +116,9 @@
   
   .gridStyle{
       height: 130px;
+  }
+
+  input.ng-invalid.ng-dirty {
+    border: 1px solid red;
   }
 }
