fix style issues

--- a/src/app/users/style.less
+++ b/src/app/users/style.less
@@ -8,6 +8,9 @@
       top: 60px;
       padding: 0;
   }
+  .grid-view + .grid-view {
+    .opacity(0);
+  }
   .main-bottom{
       position: absolute;
       bottom: 0;
