--- a/src/app/users/managedUsers/add-user-modal.html
+++ b/src/app/users/managedUsers/add-user-modal.html
@@ -40,7 +40,7 @@
 				<div class="checkbox">
 					<label>
 						<input type="checkbox" ng-model="user.config.show_member">
-						允许该用户查看所有的内部用户</label><span tooltip="如果选中，则该用户在邀请协作人时可以在自己的联系人列表中访问到其他的内部用户；而除非是自己邀请过的协作人，否则外部用户不会出现在该用户的联系人列表中。" class="glyphicon glyphicon-info-sign"></span>
+						允许该用户查看所有的内部用户</label><span tooltip="如果选中，则该用户在邀请协作人时可以在自己的联系人列表中访问到其他的内部用户；而除非是自己邀请过的协作人，否则外部用户不会出现在该用户的联系人列表中。" tooltip-append-to-body="true" class="glyphicon glyphicon-info-sign"></span>
 				</div>
 			</div>
 		</div>
@@ -49,7 +49,7 @@
 				<div class="checkbox">
 					<label>
 						<input type="checkbox" ng-model="user.config.allow_sync">
-						允许该用户在全携通与桌面端间同步文件</label><span tooltip="如果选中，则允许该用户在全携通网页端与桌面客户端之间双向同步文件。" class="glyphicon glyphicon-info-sign"></span>
+						允许该用户在全携通与桌面端间同步文件</label><span tooltip="如果选中，则允许该用户在全携通网页端与桌面客户端之间双向同步文件。" tooltip-append-to-body="true" class="glyphicon glyphicon-info-sign"></span>
 				</div>
 			</div>
 		</div>
@@ -58,7 +58,7 @@
 				<div class="checkbox">
 					<label>
 						<input type="checkbox" id="checkbox" ng-model="user.config.inner_share">
-						限定该用户在自己的文件夹中只能邀请内部用</label><span  tooltip-placement="bottom" tooltip="如果选中，则禁止该用户在自己的文件夹中邀请外部用户进行协作。" class="glyphicon glyphicon-info-sign"></span>
+						限定该用户在自己的文件夹中只能邀请内部用</label><span  tooltip-placement="bottom" tooltip="如果选中，则禁止该用户在自己的文件夹中邀请外部用户进行协作。" tooltip-append-to-body="true" class="glyphicon glyphicon-info-sign"></span>
 				</div>
 			</div>
 		</div>
