--- a/src/app/users/externalUsers/style.less
+++ b/src/app/users/externalUsers/style.less
@@ -29,6 +29,9 @@
      .user-name{
          padding-top: 10px;
      }
+     .groups-name{
+        padding-top: 10px;
+     }
      .action img{
          cursor: pointer;
          padding-left: 20px;
