--- a/src/app/users/managedUsers/delete-user-modal.html
+++ b/src/app/users/managedUsers/delete-user-modal.html
@@ -5,6 +5,6 @@
 	你是否确定删除此用户?
 </div>
 <div class="modal-footer">
-	<button class="btn btn-primary" ng-click="确定()">OK</button>
-	<button class="btn btn-warning" ng-click="取消()">Cancel</button>
+	<button class="btn btn-primary" ng-click="ok()">OK</button>
+	<button class="btn btn-warning" ng-click="cancel()">Cancel</button>
 </div>
