--- a/src/app/users/groups/style.less
+++ b/src/app/users/groups/style.less
@@ -24,17 +24,20 @@
         padding-top: 20px;
      }
      .ngHeaderCell{
-         border-bottom: 1px solid #afafaf;
+        border-bottom: 1px solid #afafaf;
      }
      .user-name{
-         padding-top: 10px;
+        padding-top: 10px;
+     }
+     .groups-name{
+        padding-top: 10px;
      }
      .action img{
-         cursor: pointer;
-         padding-left: 20px;
+        cursor: pointer;
+        padding-left: 20px;
      }
      .action img:first-child{
-         padding-left: 0px;
+        padding-left: 0px;
      }
 //   .grid-align {
 //       text-align: center;
@@ -49,18 +52,81 @@
    }
 }
 
+.add-member-window-modal{
+  display: block;
+  z-index: 1051;
+  .gridStyle{
+    height: 350px;
+    border: 1px solid #e5e5e5;
+    padding: 0;
+    margin-left: 15px;
+    margin-right: 15px;
+    width: 95%;
+
+    .ngSelectionCheckbox{
+      margin-top: 5px;
+    }
+
+    .user-name{
+      margin-top: 4px;
+    }
+
+    .gruop-add-email-row{
+      margin-top: 2px;
+    }
+  }
+}
+
 .add-group-modal-view{
+  h4{
+    border-bottom: 1px solid #e5e5e5;
+    padding-bottom: 5px;
+  }
+
+  .gridStyle{
+    height: 150px;
+    border: 1px solid #e5e5e5;
+    padding: 0;
+  }
     .tooltip-inner{  
-        background-color: #1f69ba;
+        background-color: #ed9c3d;
     }
 
     .tooltip.in {
         filter: alpha(opacity=100);
         opacity: 1;
     }
-   
-    .tooltip-arrow{
-        background-color: #1f69ba;
+
+    .tooltip.top .tooltip-arrow{
+      border-top-color: #ed9c3d;
+    }
+
+    .tooltip.top-left .tooltip-arrow{
+      border-top-color: #ed9c3d;
+    }
+
+    .tooltip.top-right .tooltip-arrow{
+      border-top-color: #ed9c3d;
+    }
+
+    .tooltip.right .tooltip-arrow{
+      border-right-color: #ed9c3d;
+    }
+
+    .tooltip.left .tooltip-arrow{
+      border-left-color: #ed9c3d;
+    }
+
+    .tooltip.bottom .tooltip-arrow{
+      border-bottom-color: #ed9c3d;
+    }
+
+    .tooltip.bottom-left .tooltip-arrow{
+      border-bottom-color: #ed9c3d;
+    }
+
+    .tooltip.bottom-right .tooltip-arrow{
+      border-bottom-color: #ed9c3d;
     }
 }
 
