--- a/src/app/users/managedUsers/user-table-action-cell.html
+++ b/src/app/users/managedUsers/user-table-action-cell.html
@@ -1,4 +1,4 @@
 <div class="action ngCellText col3 colt3">
-	<img src="./src/images/edit.png" ng-click="edit(row)"/>
+	<img src="./src/images/edit.png" ui-sref="users.managedUsers.edit"/>
 	<img src="./src/images/delete.png" ng-click="delete(row)"/>
 </div>
