--- a/src/app/users/managedUsers/user-table-action-cell.html
+++ b/src/app/users/managedUsers/user-table-action-cell.html
@@ -1,4 +1,6 @@
 <div class="action ngCellText col3 colt3">
-	<img src="./src/images/edit.png" ui-sref="users.managedUsers.edit"/>
+  <a ui-sref="users.edit({id: row.entity.user_id})">
+    <img src="./src/images/edit.png"/>
+  </a>
 	<img src="./src/images/delete.png" ng-click="delete(row)"/>
 </div>
