updateUser view and interface

--- a/src/app/app.less
+++ b/src/app/app.less
@@ -17,6 +17,7 @@
 @import "./users/externalUsers/style";
 @import "./users/groups/style";
 @import "./users/managedUsers/style";
+@import "./users/managedUsers/editUser/style";
 @import "./users/userHeader/style";
 
 @import "./reports/style";
