--- a/src/app/users/managedUsers/add-user-modal.html
+++ b/src/app/users/managedUsers/add-user-modal.html
@@ -48,7 +48,7 @@
 			<div class="col-sm-8">
 				<div class="checkbox">
 					<label>
-						<input type="checkbox" ng-model="user.config.allow_sync">
+						<input type="checkbox" ng-model="user.config.desktop_sync">
 						允许该用户在全携通与桌面端间同步文件</label><span tooltip="如果选中，则允许该用户在全携通网页端与桌面客户端之间双向同步文件。" tooltip-append-to-body="true" class="glyphicon glyphicon-info-sign"></span>
 				</div>
 			</div>
