--- a/src/app/users/managedUsers/update-user-modal.html
+++ b/src/app/users/managedUsers/update-user-modal.html
@@ -1,9 +1,9 @@
 <div class="modal-header">
 	<h3 class="modal-title">updateUser</h3>
 </div>
-<div class="modal-body">
+<div class="modal-body" ng-controller="App.Users.ManagedUsers.EditUserController">
 	<div>
-		<label>USERNAME:</label><input type="text" ng-model="editUser.real_name"/> 		
+		<label>USERNAME:</label><input type="text" ng-model="name"/> 		
 	</div>
 	<!--<div>
 		<label>EMAIL:</label><input type="text" ng-model="user.email"/>
