--- a/src/app/users/managedUsers/editUser/style.less
+++ b/src/app/users/managedUsers/editUser/style.less
@@ -37,8 +37,20 @@
     padding: 0;
     margin-left: -3px;
   }
-  
+
+  .seach-group, .seach-files{
+    float: left;
+    margin-right: 10px;
+    width: 20%
+  }
+
   .gridStyle{
-      height: 250px;
+    border: 1px solid #e5e5e5;
+    height: 250px;
+    padding: 0;
+  }
+  
+  .gridStyleform{
+    height: 250px;
   }
 }
