--- a/src/app/users/managedUsers/user-table-action-cell.html
+++ b/src/app/users/managedUsers/user-table-action-cell.html
@@ -1,5 +1,5 @@
 <div class="action ngCellText col3 colt3">
-  <a ui-sref="editUser({id: row.entity.user_id})">
+  <a ui-sref="users.editUser({id: row.entity.user_id})">
     <img src="./src/images/edit.png"/>
   </a>
 	<img src="./src/images/delete.png" ng-click="delete(row)"/>
