--- a/src/app/app.less
+++ b/src/app/app.less
@@ -16,6 +16,7 @@
 @import "./users/style";
 @import "./users/externalUsers/style";
 @import "./users/groups/style";
+@import "./users/groups/editGroup/style";
 @import "./users/managedUsers/style";
 @import "./users/managedUsers/editUser/style";
 @import "./users/userHeader/style";
