--- a/src/app/users/externalUsers/style.less
+++ b/src/app/users/externalUsers/style.less
@@ -24,20 +24,25 @@
         padding-top: 20px;
      }
      .ngHeaderCell{
-         border-bottom: 1px solid #afafaf;
+        border-bottom: 1px solid #afafaf;
      }
      .user-name{
-         padding-top: 10px;
+        padding-top: 10px;
+        padding-bottom: 9px;
      }
      .groups-name{
         padding-top: 10px;
      }
+     
+     .action{
+         padding-bottom: 19px;
+     }
      .action img{
-         cursor: pointer;
-         padding-left: 20px;
+        cursor: pointer;
+        padding-left: 20px;
      }
      .action img:first-child{
-         padding-left: 0px;
+        padding-left: 0px;
      }
 //   .grid-align {
 //       text-align: center;
