--- a/src/app/users/externalUsers/template.html
+++ b/src/app/users/externalUsers/template.html
@@ -1,8 +1,8 @@
-<div class="externalUsers-view" ng-controller="App.Users.Groups.Controller">
+<div class="externalUsers-view" ng-controller="App.Users.ExternalUsers.Controller">
 	<div class="buttonGroup">
-		<button ng-click='addGroup()' class="btn btn-default">
+		<!--<button ng-click='addGroup()' class="btn btn-default">
 			增加外部用户
-		</button>
+		</button>-->
 	</div>
 	<div class="groupGridStyle" ng-grid="groupGridOptions"></div>
 </div>
