--- a/src/app/users/groups/editGroup/row-users-remove.html
+++ b/src/app/users/groups/editGroup/row-users-remove.html
@@ -1,5 +1,5 @@
 <div class="groups-remove ngCellText col3 colt3">
-	<div ng-click="removeg(row)" >
-		<a>移出群组</a>
+	<div ng-click="removeu(row)" >
+		<a>移出群</a>
 	</div>
 </div>
