--- a/src/app/users/style.less
+++ b/src/app/users/style.less
@@ -1,7 +1,7 @@
 .users-view {
   height: 100%;
   .grid-view {
-      bottom: 0;
+      bottom: 40px;
       left: 0;
       position: absolute;
       right: 0;
