--- a/src/app/users/externalUsers/externalUser-table-action-cell.html
+++ b/src/app/users/externalUsers/externalUser-table-action-cell.html
@@ -1,5 +1,5 @@
 <div class="action ngCellText col3 colt3">
-  <a ui-sref="users.editGroup({id: row.entity.group_id})">
+  <a ui-sref="users.editExternalUer({id: row.entity.user_id})">
     <img src="./images/edit.png"/>
   </a>
 	<img src="./images/delete.png" ng-click="delete(row)"/>
