--- a/src/app/users/externalUsers/style.less
+++ b/src/app/users/externalUsers/style.less
@@ -7,6 +7,7 @@
       padding-left: 57px;
       padding-top: 9px;
       width: 90%;
+      height: 53px;
   }
   .groupGridStyle {
     bottom: 40px;
