--- a/src/app/users/managedUsers/editUser/update-user-modal.html
+++ b/src/app/users/managedUsers/editUser/update-user-modal.html
@@ -3,7 +3,7 @@
 </div>
 <div class="modal-body editUser" ng-controller="App.Users.ManagedUsers.EditUser.Controller">
 		<div class="col-sm-1">
-			<img src="{{user.avatar}}" height="64px" width="64px"/>
+			<img ng-src="{{user.avatar}}" height="64px" width="64px"/>
 		</div>
 		<div class="col-sm-10">
 			<div class="form-group">
