generate to publish

--- a/src/app/header/style.less
+++ b/src/app/header/style.less
@@ -1,6 +1,6 @@
 .header-view {
     .header-ext{
-        background-image: url("../../src/images/web_topbar_blue.png");
+        background-image: url("../images/web_topbar_blue.png");
 //      background-color: @header-ext-background-color;
         color: white;
         height: 30px;
@@ -10,7 +10,7 @@
             cursor: pointer;
             font-size: 12px;
             .back-img{
-                background: url("../../src/images/back.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
+                background: url("../images/back.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
                 float: left;
                 height: 14px;
                 margin-right: 3px;
@@ -22,7 +22,7 @@
     }
     
     .header-search{
-        background: url("../../src/images/web_topbar_gray.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
+        background: url("../images/web_topbar_gray.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
         height: 48px;
         
         .logo{
@@ -31,7 +31,7 @@
             position: relative;
             left: 20px;
             top: 8px;
-            background: url("../../src/images/logo.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
+            background: url("../images/logo.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
         }
         
         .search{
@@ -40,7 +40,7 @@
             top: 8px;
             width: 450px;
             .search-text{
-                background: url("../../src/images/search_icon.png") no-repeat scroll 10px 10px white;
+                background: url("../images/search_icon.png") no-repeat scroll 10px 10px white;
                 float: left;
                 width: 270px;
                 padding-left: 35px;
