--- a/src/app/users/externalUsers/editExternalUser/style.less
+++ b/src/app/users/externalUsers/editExternalUser/style.less
@@ -41,7 +41,11 @@
   .seach-group, .seach-files{
     float: left;
     margin-right: 10px;
-    width: 20%
+    width: 20%;
+  }
+  
+  .seach-folder{
+      height: 34px;
   }
 
   .gridStyle{
