--- a/src/app/users/externalUsers/editExternalUser/update-externalUser-modal.html
+++ b/src/app/users/externalUsers/editExternalUser/update-externalUser-modal.html
@@ -10,43 +10,24 @@
 				<label>姓名</label>
 			</div>
 			<div class="form-group">
-				<input type="text" ng-model="user.user_name" class="form-control user-name"/>
+				<input type="text" ng-model="externalUser.user_name" class="form-control user-name"/>
 			</div>
 			<div class="form-group">
 				<label>邮箱</label>
 			</div>
 			<div class="form-group">
-				<input type="email" ng-model="user.email" class="form-control user-email" disabled/>
-			</div>
-			<div class="form-group permission-checkbox">
-				<div class="checkbox">
-					<label>
-						<input type="checkbox" ng-model="user.config.desktop_sync"/>
-						允许该用户在全携通与桌面端间同步文件&nbsp;</label><span tooltip="如果选中，则允许该用户在全携通网页端与桌面客户端之间双向同步文件。" tooltip-append-to-body="true" class="glyphicon glyphicon-info-sign"></span>
-				</div>
+				<input type="email" ng-model="externalUser.email" class="form-control user-email" disabled/>
 			</div>
 			<div class="form-group">
 				<label>用户所在群组</label>
 			</div>
-			<div class="form-group">
-				<input type ="text" placeholder="搜索所在群组" class="form-control seach-group" ng-model="seachGroupsValue" ng-change="seachGroups(seachGroupsValue)"/>
-				<input type="button" class="btn btn-default" value="添加群组" ng-click="addGroupsWin()"/>
+			<div class="form-group seach-folder">
+				<input type ="text" placeholder="搜索所在文件夹" class="form-control seach-group" ng-model="seachGroupsValue" ng-change="seachGroups(seachGroupsValue)"/>
 			</div>
 			<div class="form-group gridStyleform">
-				<!--<div class="gridStyle col-sm-8" ng-grid="gridGroup"></div>-->
+				<div class="gridStyle col-sm-8" ng-grid="gridFolder"></div>
 				<div class="col-sm-4"></div>
 			</div>
-			<!--<div class="form-group">
-				<label>可以访问的协作文件夹</label>
-			</div>
-			<div class="form-group">
-				<input type="text" placeholder="搜索文件夹名称" class="form-control seach-files"/>
-				<input type="button" class="btn btn-default" value="添加协作文件夹"/>
-			</div>
-			<div class="form-group gridStyleform">
-				<div class="gridStyle col-sm-8" ng-grid="gridGroup"></div>
-				<div class="col-sm-4"></div>
-			</div>-->
 			<div class="form-group">
 				<a ui-sref="users.managedUsers">
 					<button class="btn btn-primary" ng-click="updateUser(user)">保存修改</button>
