add user controller

--- a/src/app/users/managedUsers/row-group-role.html
+++ b/src/app/users/managedUsers/row-group-role.html
@@ -1,4 +1,4 @@
-<div class="user-activety ngCellText col3 colt3" ng-show = "row.entity.showRoleMenu">
+<div class="user-activety ngCellText col3 colt3">
 	<div class="roll" style="display: block;">
 		<select ng-model="row.entity.role_id" class="">
 			<option value="0">群组成员</option>
