--- a/src/app/users/managedUsers/add-user-modal.html
+++ b/src/app/users/managedUsers/add-user-modal.html
@@ -40,7 +40,7 @@
 				<div class="checkbox">
 					<label>
 						<input type="checkbox" ng-model="user.config.show_member">
-						允许该用户查看所有的内部用户</label><span tooltip="如果选中，则该用户在邀请协作人时可以在自己的联系人列表中访问到其他的内部用户；而除非是自己邀请过的协作人，否则外部用户不会出现在该用户的联系人列表中。" tooltip-append-to-body="true" class="glyphicon glyphicon-info-sign"></span>
+						允许该用户查看所有的内部用户&nbsp;</label><span tooltip="如果选中，则该用户在邀请协作人时可以在自己的联系人列表中访问到其他的内部用户；而除非是自己邀请过的协作人，否则外部用户不会出现在该用户的联系人列表中。" tooltip-append-to-body="true" class="glyphicon glyphicon-info-sign"></span>
 				</div>
 			</div>
 		</div>
@@ -49,7 +49,7 @@
 				<div class="checkbox">
 					<label>
 						<input type="checkbox" ng-model="user.config.desktop_sync">
-						允许该用户在全携通与桌面端间同步文件</label><span tooltip="如果选中，则允许该用户在全携通网页端与桌面客户端之间双向同步文件。" tooltip-append-to-body="true" class="glyphicon glyphicon-info-sign"></span>
+						允许该用户在全携通与桌面端间同步文件&nbsp;</label><span tooltip="如果选中，则允许该用户在全携通网页端与桌面客户端之间双向同步文件。" tooltip-append-to-body="true" class="glyphicon glyphicon-info-sign"></span>
 				</div>
 			</div>
 		</div>
@@ -58,60 +58,22 @@
 				<div class="checkbox">
 					<label>
 						<input type="checkbox" id="checkbox" ng-model="user.config.inner_share">
-						限定该用户在自己的文件夹中只能邀请内部用</label><span  tooltip-placement="bottom" tooltip="如果选中，则禁止该用户在自己的文件夹中邀请外部用户进行协作。" tooltip-append-to-body="true" class="glyphicon glyphicon-info-sign"></span>
+						限定该用户在自己的文件夹中只能邀请内部用&nbsp;</label><span  tooltip-placement="bottom" tooltip="如果选中，则禁止该用户在自己的文件夹中邀请外部用户进行协作。" tooltip-append-to-body="true" class="glyphicon glyphicon-info-sign"></span>
 				</div>
 			</div>
 		</div>
-		<!--<div class="form-group">
-		<label class="col-sm-2 control-label">账号管理员</label>
-		<div id="changeco-admin" class="col-sm-4">
-		<div class="checkbox">
-		<div class="downmune" ng-click="switchAccountAdmin()">
-		<a>
-		更改账号管理员&nbsp;
-		</a><span class="glyphicon glyphicon-circle-arrow-down"></span>
-		</div>
-		</div>
-		</div>
-		</div>
-		<div class="account-admin" ng-show='showAccountAdmin'>
 		<div class="form-group">
-		<label for="newadmin" class="col-sm-2 control-label">新管理员</label>
-		<div class="col-sm-10">
-		<input type="newadmin" class="form-control" id="newadmin" placeholder="newadmin">
-		</div>
-		</div>
-		<div class="form-group">
-		<label for="newroll" class="col-sm-2 control-label">你的新角色</label>
-		<div class="col-sm-10">
-		<select class="form-control">
-		<option>协作管理员</option><option>普通用户</option>
-		</select>
-		</div>
-		</div>
-		<div class="form-group">
-		<div class="col-sm-offset-2 col-sm-10">
-		<button type="submit" class="btn btn-default">
-		确定
-		</button>
-		<button type="cancle" class="btn btn-default col-sm-offset-1">
-		取消
-		</button>
-		</div>
-		</div>
-		</div>-->
-		<div class="form-group">
-			<label class="col-sm-4 control-label" for="seach">选择该用户所属的群组</label>
+			<label class="col-sm-2 control-label" for="seach">所属群组</label>
 			<div class="col-sm-5">
-				<input type="name" placeholder="输入群组名称" class="form-control" ng-model="seachGroupsValue" ng-change="seachGroups(seachGroupsValue)">
+				<input type="button" class="btn btn-default" ng-click="addGroupWindow()" value="添加群组"></input>
 			</div>
 		</div>
 		<div class="form-group">
-			<div class="gridStyle col-sm-12" ng-grid="gridGroup"></div>
+			<div class="gridStyle col-sm-12" ng-grid="gridAddGroup"></div>
 		</div>
 
 		<div class="modal-footer">
-			<button class="btn btn-primary" type="submit" >
+			<button class="btn btn-primary" type="submit">
 				保存
 			</button>
 			<input type="button" class="btn" ng-click="cancel()" value="取消">
