--- a/src/app/users/groups/add-group-modal.html
+++ b/src/app/users/groups/add-group-modal.html
@@ -1,9 +1,9 @@
 <div class="modal-header">
-	<h3 class="modal-title">创建新群组</h3>
+	<h3 class="modal-title">创建群组</h3>
 </div>
 <div class="modal-body">
 	<form role="form" class="form-horizontal">
-		<h4 class="">创建新群组</h4>
+		<h4 class="">群组基本信息</h4>
 		<div class="form-group">
 			<label class="col-sm-2 control-label">群组名称</label>
 			<div class="col-sm-5">
@@ -54,9 +54,9 @@
 </div>
 <div class="modal-footer">
 	<button class="btn btn-primary" ng-click="ok(group)">
-		OK
+		确定
 	</button>
-	<button class="btn btn-warning" ng-click="cancel()">
-		Cancel
+	<button class="btn" ng-click="cancel()">
+		取消
 	</button>
 </div>
