--- a/src/app/users/managedUsers/add-group-window-modal.html
+++ b/src/app/users/managedUsers/add-group-window-modal.html
@@ -15,9 +15,9 @@
 </div>
 <div class="modal-footer">
 	<button class="btn btn-primary" ng-click="ok(group)">
-		OK
+		确定
 	</button>
-	<button class="btn btn-warning" ng-click="cancel()">
-		Cancel
+	<button class="btn btn-default" ng-click="cancel()">
+		取消
 	</button>
 </div>
