--- a/src/app/overview/template.html
+++ b/src/app/overview/template.html
@@ -1,3 +1,7 @@
 <div class="overview-view" ng-controller="App.Overview.Controller">
-	<div data-ac-chart="'pie'" data-ac-data="data" data-ac-config="config" class="chart"></div>
+	<div data-ac-chart="'bar'" data-ac-data="loginCountData" data-ac-config="loginCountConfig" class="chart"></div>
+	<div data-ac-chart="'bar'" data-ac-data="spaceRankData" data-ac-config="spaceRankConfig" class="chart"></div>
+	<div data-ac-chart="'line'" data-ac-data="loginTrendData" data-ac-config="loginTrendConfig" class="chart"></div>
+	<div data-ac-chart="'line'" data-ac-data="spaceTrendData" data-ac-config="spaceTrendConfig" class="chart"></div>
+	<div data-ac-chart="'bar'" data-ac-data="spaceRankData" data-ac-config="spaceRankConfig" class="chart"></div>
 </div>
