--- a/src/app/overview/template.html
+++ b/src/app/overview/template.html
@@ -4,4 +4,5 @@
 	<div data-ac-chart="'line'" data-ac-data="loginTrendData" data-ac-config="loginTrendConfig" class="chart"></div>
 	<div data-ac-chart="'line'" data-ac-data="spaceTrendData" data-ac-config="spaceTrendConfig" class="chart"></div>
 	<div data-ac-chart="'bar'" data-ac-data="spaceRankData" data-ac-config="spaceRankConfig" class="chart"></div>
+	<div data-ac-chart="'pie'" data-ac-data="data" data-ac-config="config" class="chart"></div>
 </div>
