--- a/src/app/users/userHeader/style.less
+++ b/src/app/users/userHeader/style.less
@@ -16,10 +16,11 @@
         text-align: center;           
     }    
     .active {
-        background-color: #1F69BA;
-        color: white;
+        border-bottom: 3px solid #1F69BA;
+//      background-color: #1F69BA;
+//      color: white;
     }
     .active a{
-        color: white;
+//      color: white;
     } 
 }
